<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="hello">Hello World, UdeMActivity!</string>
    <string name="app_name">UdeM</string>
    <string name="boutonrssbasic">Les Nouvelles</string>
    <string name="boutonrss">Les Nouvelles (Sources)</string>
    <string name="boutonrssCat">Les Nouvelles (Cat)</string>
    <string name="app_udemrssFeedName">UdeM : Source de nouvelles</string>
    <string name="app_udemrssCatName">UdeM : Categories</string>
    <string name="app_udemrssFeedCatName">UdeM : Sources + Categories</string>
    <string name="app_myPreferencesName">Préférences</string>
    <string name="app_bienvenueName">Bienvenu</string>

    <!-- dans le menu -->
    <string name="preferences">Préférences</string>
    <string name="mettre_a_jour">Mettre à jour</string>
        <string name="help">Instructions</string>
     <string name="sources">Sources</string>
    <string name="partager">Partager</string>
    <string name="favori">Conserver</string>

    <!-- pour le share -->
    <string name="sharewith">Partager avec...</string>

    <string-array name="PreferenceFruitsItems">
        <item>Banane</item>
        <item>Fraise</item>
        <item>Pomme</item>
    </string-array>
    <string-array name="PreferenceFruitsValues">
        <item>111</item>
        <item>222</item>
    </string-array>

    <string name="boutonrssFeedCat">Les Nouvelles (F+C)</string>

</resources>