<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menushare"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="ifRoom"
        android:title="@string/partager">
    </item>
    <item
        android:id="@+id/menuprefsdetail"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never"
        android:title="@string/preferences">
    </item>
    <item
        android:id="@+id/menuhelpdetail"
        android:icon="@android:drawable/ic_menu_help"
        android:showAsAction="never"
        android:title="@string/help">
    </item>
    <!--
    <item
        android:id="@+id/menusave"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="ifRoom"
        android:title="@string/favori">
    </item>
    -->


    <!--
         <item
        android:id="@+id/menufavori"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="ifRoom"
        android:title="@string/favori">
    </item>
    -->

</menu>